--- a/public/500.html
+++ b/public/500.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>We're sorry, but something went wrong</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   <style>
   body {
-    background-color: #EFEFEF;
+    font-family: 'Roboto Condensed', sans-serif;
     color: #2E2F30;
     text-align: center;
-    font-family: arial, sans-serif;
     margin: 0;
   }
 
@@ -23,7 +23,7 @@
     border-right-color: #999;
     border-left-color: #999;
     border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
+    border-top: #f72969 solid 4px;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
     background-color: white;
@@ -32,8 +32,7 @@
   }
 
   h1 {
-    font-size: 100%;
-    color: #730E15;
+    color: #f72969;
     line-height: 1.5em;
   }
 
@@ -60,7 +59,7 @@
     <div>
       <h1>We're sorry, but something went wrong.</h1>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>Try that again or contact the application owner.</p>
   </div>
 </body>
 </html>
